--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,9 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(OpenCV CONFIG REQUIRED)
 
+include_directories(${OpenCV_INCLUDE_DIR})
+message("OpenCV_INCLUDE_DIRS: " ${OpenCV_INCLUDE_DIR})
+
+
 add_executable(CurseJob main.cpp)
 target_link_libraries(CurseJob ${OpenCV_LIBS})
