--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,8 @@ if (DOXYGEN_FOUND)
             WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
             COMMENT "Generating API documentation with Doxygen"
             VERBATIM)
+    install (DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/ccn_doc
+        DESTINATION ./bin)
 else ()
     message(STATUS "Couldn't find Doxygen")
 endif ()
